# NKFADC_Unpacker

./: .gitignore  CMakeLists.txt  DrawHist_peak_peak.c  NKFADC_Skel.C  NKFADC_Skel.h  README.md  Unpacker.cpp  det_map.txt  det_map_STARKJR.txt  sample_spectrum.C  sample_spectrum_2d.C
inc/: ASGARD_Event.h  CryHit.h  Det1Hit.h  EventLinkDef.h  FVHit.h  FVHitLinkDef.h  FileReader.h  Global.h  HitBuilder.h  HitLinkDef.h  HitTypes.h  NaIHit.h  NaI_Event.h  OhmicHit.h  STARKJR_Event.h  SegHit.h  SegHitLinkDef.h  Sig.h  SingleHit.h  Skel_Event.h  StripHit.h  TimeSorter.h  X6Hit.h
sample/: NK.h  sample_spectrum_2d.C  sample_spectrum_2d_sumdiff.C
src/: ASGARD_Event.cxx  CryHit.cxx  Det1Hit.cxx  FVHit.cxx  FileReader.cxx  HitBuilder.cxx  NaIHit.cxx  NaI_Event.cxx  OhmicHit.cxx  STARKJR_Event.cxx  SegHit.cxx  SingleHit.cxx  Skel_Event.cxx  StripHit.cxx  TimeSorter.cxx  X6Hit.cxx
